--- a/popup.html
+++ b/popup.html
@@ -31,7 +31,7 @@
    
     <div id="confirmModal" class="modal">
         <div class="modal-content">
-            <p id="modalMessage">정말 캐시를 삭제하시겠습니까?</p>
+            <p id="modalMessage"></p>
             <button id="confirmYes">확인</button>
             <button id="confirmNo">취소</button>
         </div>
